--- a/src/config/config.json
+++ b/src/config/config.json
@@ -18,10 +18,10 @@
   },
 
   "call_to_action": {
-    "title": "Helping teams in the world with focus",
-    "description": "Lorem ipsum dolor sit sed dmi amet, consectetur adipiscing. Cdo tellus, sed condimentum volutpat.",
+    "title": "Ready to revolutionize your business with AI?",
+    "description": "Let's embark on your transformative AI journey today and unlock new possibilities.",
     "button": {
-      "label": "Download The Theme",
+      "label": "Schedule a Free Consultation",
       "link": "https://themefisher.com/astro-themes/pinwheel-astro"
     }
   },
