--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^2.1.1",
-    "@astrojs/rss": "^4.0.4",
     "@astrojs/react": "^3.0.9",
+    "@astrojs/rss": "^4.0.4",
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.3.2",
@@ -25,6 +25,7 @@
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
     "marked": "^12.0.0",
+    "mpx": "^1.0.3",
     "react-feather": "^2.0.10",
     "react-icons": "^5.0.1",
     "react-lite-youtube-embed": "^2.4.0",
@@ -39,11 +40,11 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/marked": "^5.0.2",
     "@types/react": "^18.2.54",
+    "autoprefixer": "^10.4.17",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "autoprefixer": "^10.4.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.70.0",
