--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^2.1.1",
-    "@astrojs/react": "^3.0.9",
+    "@astrojs/react": "^3.6.2",
     "@astrojs/rss": "^4.0.4",
     "@astrojs/sitemap": "^3.0.5",
-    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/tailwind": "^5.1.1",
     "astro-auto-import": "^0.4.2",
     "astro-font": "^0.0.77",
     "date-fns": "^3.3.1",
@@ -25,6 +25,7 @@
     "gray-matter": "^4.0.3",
     "marked": "^12.0.0",
     "mpx": "^1.0.3",
+    "openai": "^4.63.0",
     "react-feather": "^2.0.10",
     "react-icons": "^5.0.1",
     "react-lite-youtube-embed": "^2.4.0",
@@ -45,12 +46,12 @@
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "sass": "^1.70.0",
     "sharp": "0.33.1",
     "tailwind-bootstrap-grid": "^5.1.0",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.13",
     "typescript": "5.3.3"
   }
 }
