--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-feather": "^2.0.10",
     "react-icons": "^5.0.1",
     "react-lite-youtube-embed": "^2.4.0",
+    "react-markdown": "^9.0.1",
     "react-youtube": "^10.1.0",
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
