--- a/src/config/config.json
+++ b/src/config/config.json
@@ -22,7 +22,7 @@
     "description": "Let's embark on your transformative AI journey today and unlock new possibilities.",
     "button": {
       "label": "Schedule a Free Consultation",
-      "link": "https://themefisher.com/astro-themes/pinwheel-astro"
+      "link": "/schedule"
     }
   },
 
@@ -38,7 +38,7 @@
     "location": "2118 Thornridge Cir. Syracuse, Connecticut 35624",
     "phone": "+704-555-0127",
     "contact_form_action": "#",
-    "copyright": "Copyright © 2023 a theme by [Themefisher](https://themefisher.com)"
+    "copyright": "Copyright © 2024 Juan Jaramillo AI Consulting Services. All rights reserved. Designed and developed by [Juan Jaramillo](https://juanjaramillo.tech)"
   },
 
   "metadata": {
