--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,14 +1,14 @@
 {
   "site": {
-    "title": "Pinwheel Astro",
-    "base_url": "https://pinwheel-astro.vercel.app",
+    "title": "Juan Jaramillo AI Consulting Services",
+    "base_url": "https://juanjaramillo.ai",
     "base_path": "/",
     "trailing_slash": false,
     "favicon": "/images/favicon.png",
     "logo": "/images/logo.png",
     "logo_width": "147",
     "logo_height": "31",
-    "logo_text": "Pinwheel"
+    "logo_text": "Juan Jaramillo AI Consulting Services"
   },
 
   "settings": {
@@ -28,22 +28,22 @@
 
   "disqus": {
     "enable": true,
-    "shortname": "themefisher-template",
+    "shortname": "juan-jaramillo-ai-consulting-services",
     "settings": {}
   },
 
   "params": {
-    "footer_description": "Lorem ipsum dolor sit sed dmi amet, consectetur adipiscing. Cdo tellus, sed condimentum volutpat.",
-    "email": "info@andromeda.io",
-    "location": "2118 Thornridge Cir. Syracuse, Connecticut 35624",
-    "phone": "+704-555-0127",
+    "footer_description": "Empowering businesses with cutting-edge AI solutions. We transform challenges into opportunities, driving innovation and growth across industries.",
+    "email": "hola@juanjaramillo.tech",
+    "location": "Juan Jaramillo AI Consulting Services",
+    "phone": "(+57) 305 420 6139",
     "contact_form_action": "#",
     "copyright": "Copyright © 2024 Juan Jaramillo AI Consulting Services. All rights reserved. Designed and developed by [Juan Jaramillo](https://juanjaramillo.tech)"
   },
 
   "metadata": {
-    "meta_author": "Themefisher",
-    "meta_image": "/images/og-image.png",
-    "meta_description": "pinwheel astro"
+    "meta_author": "Juan Jaramillo AI",
+    "meta_image": "https://media.juanjaramillo.tech/og-image.webp",
+    "meta_description": "Juan Jaramillo AI Consulting Services"
   }
 }
