--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@astrojs/rss": "^4.0.4",
     "@astrojs/sitemap": "^3.0.5",
     "@astrojs/tailwind": "^5.1.1",
+    "@jop-software/astro-cookieconsent": "^3.0.0",
     "astro-auto-import": "^0.4.2",
     "astro-font": "^0.0.77",
     "date-fns": "^3.3.1",
@@ -34,7 +35,8 @@
     "remark-collapse": "^0.1.2",
     "remark-toc": "^9.0.0",
     "shufflejs": "^6.1.0",
-    "swiper": "^11.0.6"
+    "swiper": "^11.0.6",
+    "vanilla-cookieconsent": "^3.0.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
