--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@jop-software/astro-cookieconsent": "^3.0.0",
     "astro-auto-import": "^0.4.2",
     "astro-font": "^0.0.77",
+    "browserslist": "^4.24.0",
     "date-fns": "^3.3.1",
     "disqus-react": "^1.1.5",
     "github-slugger": "^2.0.0",
@@ -44,7 +45,7 @@
     "@types/marked": "^5.0.2",
     "@types/react": "^18.2.54",
     "astro": "^4.15.8",
-    "autoprefixer": "^10.4.17",
+    "autoprefixer": "^10.4.20",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
     "prettier-plugin-astro": "^0.13.0",
